@@ -5,6 +5,9 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/05/09:
+- TestEngine: Added IsWarmUpGuiFrame() query to avoid polling frame-count.
+
 2023/04/26:
 - TestEngine: Reworked mouse actions to avoid unnecessarily focusing windows if not necessary.
   If an item is visible and within a window not inhibited by a popup, we don't need to focus
